[package]
name = "homeassistant-linux-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zbus = "3.14.1"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"

serde = "1"
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.10"